--- a/ICE4/css/responsive.css
+++ b/ICE4/css/responsive.css
@@ -19,14 +19,16 @@
 img.resp-img-3 {
 	float: left;
 	display: inline-block;
-	width: 28rem;
+	width: 25rem;
 	padding-bottom: 10px;
+	box-shadow: none !important;
 }
 img.resp-img-4{
 	float: right;
 	display: inline-block;
-	width: 28rem;
+	width: 25rem;
 	padding-bottom: 10px;
+	box-shadow: none !important;
 }
 }
 
@@ -47,6 +49,7 @@ img {
 	padding: 0.75rem;
 	margin-right: auto;
 	margin-left: auto;
+	box-shadow: none !important;; 
 
 }
 
@@ -63,19 +66,19 @@ img.resp-img-2{
 img.resp-img-3{
 	float: left;
 	display: inline-block;
-	width: 20%;
+	width: 22.5%;
 	height: 355px;
-	padding-left: 1.6rem;
-	padding-right: 1.6rem;
+	padding-left: .7rem;
+	padding-right: .7rem;
 	clear: both;
 }
 img.resp-img-4{
 	float: left;
 	height: 355px;
 	display: inline-block;
-	padding-left: 1.6rem;
-	padding-right: 1.6rem;
-	width: 20%;
+	padding-left: .7rem;
+	padding-right: .7rem;
+	width: 22.5%;
 }
 img.resp-img-5{
 	float: right;
