--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -19,21 +19,32 @@
 header, .logo {
 	background-color: #e3e3e3;
 	color: #1a1b29;
-; 
 }
+img.breakfast {
+	float: left;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
+}
+img.salad{
+	float: right;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
 
-img.resp-img-3 {
-	display: inline-block;
-	width: 45%;
-	padding-bottom: 10px;
-	box-shadow: none !important;
 }
-img.resp-img-4{
+img.pasta {
+	float: left;
 	display: inline-block;
-	width: 45%;
-	padding-bottom: 10px;
-	box-shadow: none !important;
+	width: 40%;
+	height: 40%;
 }
+img.eggs{
+	float: right;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
+
 }
 
 @media only screen and (min-width: 1000px) {
@@ -59,10 +70,31 @@ header, .logo {
 	background-color: #e3e3e3;
 	color: black; 
 }
-img {
-	display: block;
-	padding: 0.75rem;
-	margin-right: auto;
-	margin-left: auto;
-	box-shadow: none !important;; 
+
+img.breakfast {
+	float: left;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
 }
+img.salad{
+	float: right;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
+
+}
+img.pasta {
+	float: left;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
+}
+img.eggs{
+	float: right;
+	display: inline-block;
+	width: 47%;
+	height: 40%;
+
+}
+
