--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -250,6 +250,19 @@ header{
   	position: relative;
   	top: 1px;
 }
+
+.wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+.wrapper iframe {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 /*implement menu toogle*/
 .top-nav.toggle-open ul{
 	display: block;
