--- a/Portfolio/css/testmain.css
+++ b/Portfolio/css/testmain.css
@@ -17,13 +17,6 @@
 	color: #1a1b29;
 }
 
-.content h3{
-	margin-top: 0px;
-}
-#single .main-content h3{
-	margin-top: -300px;
-}
-
 header, .logo {
 	background-color: #e3e3e3;
 	color: #1a1b29;
@@ -33,31 +26,12 @@ header, .logo {
 .responsive {
         width: 100%;
     }
-.main-content h3{
-	font-size: 1.17em;
-	text-align: center;
-	margin-top: 0px;
-}
 
 .clearfix:after {
     content: "";
     display: table;
     clear: both;
 }
-.column{
-	width:33%;
-
-}
-img.dog{
-	margin-top: 50px;
-	padding-right:4px;
-	width: 100%;
-
-}
-img.me{
-	margin-top: 50px;
-	padding-left:4px;
-	width: 100%;
 
 }
 
@@ -69,19 +43,6 @@ img.me{
 .responsive {
         width: 50%;
     }
-
-.main-content h3{
-	font-size: 1.17em;
-	text-align: center;
-	margin-top: 0px;
-}
-.main-content .row{
-	padding-top: 0px;
-	width: 100%;
-}
-.column{
-	width: 25%;
-}
 
 .clearfix:after {
     content: "";
@@ -101,6 +62,7 @@ h1{
 
 }
 
+
 .logo{
 	display: inline-block;
 	text-align: left;
@@ -111,18 +73,22 @@ header, .logo {
 	background-color: #e3e3e3;
 	color: black; 
 }
-img.dog{
-	margin-top: 0px;
-	padding-right:4px;
-	width: 100%;
 
-}
-img.me{
-	margin-top: 0px;
-	padding-left:4px;
-	width: 100%;
 
-}
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
 }
 
-
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
+    }
+}
