--- a/Portfolio/css/teststyle.css
+++ b/Portfolio/css/teststyle.css
@@ -38,46 +38,7 @@ h1 {
     word-break: break-all;
 }
 
-.row {
-    margin: 8px -16px;
-    padding:10px;
-}
 
-/* Add padding BETWEEN each column (if you want) */
-.row,
-.row > .column {
-    padding: 5px;
-}
-
-/* The grid: Four equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 25%;
-    padding: 5px;
-}
-
-/* Style the images inside the grid */
-.column img {
-    opacity: 0.8; 
-    cursor: pointer; 
-    overflow-y:scroll;
-    overflow-x:hidden;
-    z-index:-1;
-}
-
-.column img:hover {
-    opacity: 1;
-    overflow-y:scroll;
-    overflow-x:hidden;
-    z-index: -1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 /* The expanding image container (positioning is needed to position the close button and the text) */
 .container {
@@ -118,21 +79,16 @@ p{
 	margin: 15px;
 }
 img.dog{
-	padding-top: 100px;
+	padding-top: 50px;
 	padding-right:4px;
 	width: 100%;
-	margin-top: 130px;
 
 }
 img.me{
-	padding-top: 100px;
+	padding-top: 50px;
 	padding-left:4px;
 	width: 100%;
-	margin-top: 130px;
-
 }
-
-
 
 a.skip:active, a.skip:focus, a.skip:hover {
     position:fixed;
@@ -152,13 +108,6 @@ html, body, header{
 header, .logo {
 	background-color: #e3e3e3;
 	color: black;
-	z-index: 1;
-}
-
-.column{
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
 }
 body{
 	display: flex;
@@ -192,13 +141,11 @@ h5{
 h6{
 	font-size: .75em;
 }
-#cap h3{
-	margin-top: 10px;
-}
 .main-content{
-	margin-top: 250px;
+	margin-top: 110px;
 }
 .main-content h3{
+	margin-top: 100px;
 }
 .about, .work, .crafts, .contact{
 	margin: auto;
@@ -212,6 +159,7 @@ header{
 	font-size: 105%;
     width: 100%;
     position: fixed;
+    z-index: 1;
 }
 /*mobile-first*/
 .top-nav ul{
@@ -241,7 +189,7 @@ header{
 	text-align: center;
 }
 .top-nav ul li a.current-page{
-	color: red;
+	color: black;
 	font-weight: bold;
 }
 .top-nav ul li a.current-page:before {
@@ -286,7 +234,7 @@ header{
 	background-color: #e3e3e3; /*CHANGE*/
 	margin: 0;
 	text-align: center;
-	padding: .5em .5em;
+	padding: .1em .1em;
 	color: #1a1b29;
 
 }
@@ -300,24 +248,16 @@ header{
 	height: 25px;
 }
 
-iframe{
-	position: absolute;
-}
 footer {
- position: relative;
+ position: fixed;
  bottom: 0;
  width: 100%;
- margin-bottom: 0;
 }
 footer p{
 	padding-top: .5em;
 	padding-bottom: .75em;
-	color: teal;
+	color: red;
 	text-align: center;
-	background-color: #e3e3e3;
-	width: 100%;
-	margin-left: 0px;
-
 }
 
 /*-----HOMEPAGE-----*/
@@ -333,5 +273,31 @@ footer p{
 	margin: auto;
 	padding: 1.5em;
 }
+
+.row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+
+.img{
+	z-index: -1;
+}
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
 
 
