--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -16,6 +16,30 @@
 	padding: .1em .10em;
 	color: #1a1b29;
 }
+.container1 {
+    position: relative;
+    text-align: center;
+    color: white;
+    margin-top: 180px;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Palatino, sans-serif;
+    font-size: 40px;
+}
+.centered1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Palatino, sans-serif;
+    font-size: 26px;
+    color: white;
+    background-color: #aec6cf;
+}
 
 .content h3{
 	margin-top: 0px;
@@ -25,7 +49,7 @@
 }
 
 header, .logo {
-	background-color: #e3e3e3;
+    background-color: #eedad0;
 	color: #1a1b29;
 }
 
@@ -88,7 +112,30 @@ img.me{
     display: table;
     clear: both;
 }
-
+.container1 {
+    position: relative;
+    text-align: center;
+    color: white;
+    margin-top:100px;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Palatino, sans-serif;
+    font-size: 50px;
+}
+.centered1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Palatino;
+    font-size: 40px;
+    color: white;
+    background-color: #aec6cf;
+}
 
 .top-nav ul li{
 	display: inline-block;
@@ -108,7 +155,7 @@ h1{
 	color: #1a1b29;
 }
 header, .logo {
-	background-color: #e3e3e3;
+    background-color: #eedad0;
 	color: black; 
 }
 img.dog{
