--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -17,6 +17,8 @@ html, body{
 	color: #EEEEEE;
 }
 
+
+
 * {
     box-sizing: border-box;
 }
@@ -187,24 +189,56 @@ html, body, header{
 }
 
 
-/* The container <div> - needed to position the dropdown content */
+button.dropbtn {
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font-family: Palatino;
+    background-color: #eedad0;
+    padding: .6em .8em;
+    display: inline-block;
 
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #9EAEB3;
-    min-width: 160px;
-    z-index: 1;
 }
 
-/* Links inside the dropdown */
+
+
+.dropbtn:hover, .dropbtn:focus {
+    position: relative;
+}
+
+
+.dropdown {
+    position: relative;
+    display: block;
+    text-align: center;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f1f1f1;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    text-align: center;
+    z-index-1
+}
+
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    display: inline-block;
+}
+
+.dropdown a:hover {
+    background-color: #ddd;
+    color: red;
+}
+
+.show{
+    display:block;
+    position: relative;
 }
 
 header, .logo {
@@ -298,10 +332,10 @@ header{
 	display: block;
 	text-align: center;
 }
-.top-nav ul li a.current-page{
+/*.top-nav ul li a.current-page{
 	color: red;
 	font-weight: bold;
-}
+}*/
 .top-nav ul li a.current-page:before {
   content: "\27A4  ";
   color: black;
@@ -309,18 +343,18 @@ header{
   position: relative;
   top: 1px;
 }
-.top-nav ul li a:hover, .menu-icon a:hover, .top-nav ul li a:focus, .menu-icon a:focus{
+/*.top-nav ul li a:hover, .menu-icon a:hover, .top-nav ul li a:focus, .menu-icon a:focus{
     background-color: #eedad0;
     color: red;
     font-weight: bold;
-}
-.top-nav ul li a:hover:before, .top-nav ul li a:focus:before{
+}*/
+/*.top-nav ul li a:hover:before, .top-nav ul li a:focus:before{
     content: "\27A4  ";
   	color: red;
   	padding-right: 4px;
   	position: relative;
   	top: 1px;
-}
+}*/
 
 .wrapper {
     position: relative;
@@ -369,6 +403,27 @@ footer {
 
 }
 
+.scrollup {
+  width: 45px;
+  height: 45px;
+  display: block;
+  margin-left: auto;
+  position: relative;
+  cursor: pointer;
+}
+.scrollup img {
+  position: absolute;
+}
+.scrollImg2 {
+  opacity: 0;
+}
+.scrollup:hover > .scrollImg1 {
+  opacity: 0;
+}
+.scrollup:hover > .scrollImg2 {
+  opacity: 1;
+}
+
 footer p{
 	padding-top: .1em;
 	color: black;
@@ -391,6 +446,9 @@ footer p{
 	max-width: 300px;
 	margin: auto;
 	padding: 1.5em;
+}
+.top-nav ul li .red{
+    color: red;
 }
 
 
