--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -24,7 +24,7 @@ html, body{
 }
 
 form{
-    margin-top: -5px;
+    margin-top: 16px;
 }
 
 body {
@@ -153,7 +153,11 @@ h1 {
 
 p{
 	text-align: center;
-	margin: 15px;
+	margin-top: 15px;
+}
+
+p#contact{
+    margin-top: 60px;
 }
 img.dog{
 	padding-top: 100px;
@@ -239,6 +243,7 @@ button.dropbtn {
 .show{
     display:block;
     position: relative;
+    position: show;
 }
 
 header, .logo {
@@ -291,6 +296,7 @@ h6{
 	margin-top: 250px;
 }
 .main-content h3{
+    margin-top: 40px;
 }
 .about, .work, .crafts, .contact{
 	margin: auto;
