--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -8,6 +8,17 @@
 .top-nav ul{
 	text-align: center;
 }
+.descript{
+    margin-top: 190px;
+    margin-left: 100px;
+    margin-right: 100px;
+
+}
+.row1 {
+    margin-top: 200px;
+    display: flex;
+    margin-bottom: 250px;
+}
 
 
 .logo{
@@ -19,7 +30,8 @@
 	color: #1a1b29;
 }
 form{
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
 p#contact{
     margin-top: -30px;
@@ -61,10 +73,11 @@ header, .logo {
 	color: #1a1b29;
 }
 
+.responsive{
+    width: 100%;
+}
 
-.responsive {
-        width: 100%;
-    }
+
 .main-content h3{
 	font-size: 1.17em;
 	text-align: center;
@@ -93,6 +106,42 @@ img.me{
 
 }
 
+.column1{
+    display: inline-flex;
+    width: 30%;
+    margin-left: 40px;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: #C0C0C0 ;
+}
+p.column1{
+    color: red;
+}
+.column2{
+    display: inline-flex;
+    width: 30%;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: teal ;
+}
+.column3{
+    display: inline-flex;
+    width: 30%;
+    margin-right: 40px;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: #C0C0C0 ;
+}
+
 }
 
 
@@ -105,9 +154,13 @@ form{
     margin-top: 15px;
 }
 
-.responsive {
-        width: 50%;
-    }
+
+
+.descript{
+    margin-top: 180px;
+
+}
+
 
 .main-content h3{
 	font-size: 1.17em;
@@ -151,7 +204,7 @@ p#contact{
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: Palatino;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     background-color: #aec6cf;
 }
@@ -188,6 +241,46 @@ img.me{
 	padding-left:4px;
 	width: 100%;
 
+}
+.column1{
+    display: inline-flex;
+    width: 33%;
+    margin-left: 40px;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: #C0C0C0 ;
+}
+p.column1{
+    color: red;
+}
+.column2{
+    display: inline-flex;
+    width: 33%;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: teal ;
+}
+.row1 {
+    margin-top: 200px;
+    display: flex;
+    margin-bottom: 180px;
+}
+.column3{
+    display: inline-flex;
+    width: 33%;
+    margin-right: 40px;
+    text-align: center;
+    font-color: red;
+    border-style: round;
+    padding: 10px;
+    border-radius: 50px;
+    background: #C0C0C0 ;
 }
 }
 
