--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -26,6 +26,7 @@ iframe{
     margin-top: 5px;
     height: 600px;
     width:100%;
+    overflow-y: scroll;
 }
 
 .logo{
@@ -294,6 +295,7 @@ iframe{
     margin-top: 5px;
     height: 600px;
     width:100%;
+    overflow-y: scroll;
 }
 
 }
