--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -68,9 +68,8 @@ h1 {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-    float: left;
+    float: right;
     width: 33%;
-    padding: 5px;
 }
 
 /* Style the images inside the grid */
@@ -248,6 +247,7 @@ p.column1{
 
 .grid{
 	display: flex;
+    width: 100%;
 	padding-top: 30px;
 	margin-left: 15px;
 	margin-right: 15px;
